<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".ui.Questionactivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:cardCornerRadius="25dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:orientation="vertical">


                <TextView
                    android:id="@id/questiontitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:textSize="28dp"
                    tools:text="@string/question" />

                <ImageView
                    android:id="@+id/flagimage"
                    android:layout_width="340dp"
                    android:layout_height="210dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/image_back"
                    android:contentDescription="@string/flag_image"
                    tools:src="@drawable/china" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="3dp"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/textprogress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:gravity="center_horizontal"
                        android:textSize="14sp"
                        tools:text="10/10" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="8.7"
                        android:indeterminate="false"
                        android:max="10"
                        android:progressTint="#7E4488"
                        tools:progress="8" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/choice1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/option_border"
                    android:gravity="center"
                    android:minHeight="55dp"
                    android:textColor="#575050"
                    android:textSize="25dp"
                    tools:text="Option1" />

                <TextView
                    android:id="@+id/choice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/option_border"
                    android:gravity="center"
                    android:minHeight="53dp"
                    android:textColor="#575050"
                    android:textSize="25dp"
                    tools:text="Option2" />

                <TextView
                    android:id="@+id/choice3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/option_border"
                    android:gravity="center"
                    android:minHeight="53dp"
                    android:textColor="#575050"
                    android:textSize="25dp"
                    tools:text="Option3" />

                <TextView
                    android:id="@+id/choice4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/option_border"
                    android:gravity="center"
                    android:minHeight="53dp"
                    android:textColor="#575050"
                    android:textSize="25dp"
                    tools:text="Option4" />

                <Button
                    android:id="@+id/checkbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:minHeight="53dp"
                    android:padding="5dp"
                    android:text="@string/check"
                    android:textSize="25dp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>